opam-version: "1.2"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: [
  "Jane Street Group, LLC <opensource@janestreet.com>"
  "BAP Team"
]
homepage: "https://github.com/BinaryAnalysisPlatform/ppxlib-ocamlbuild"
bug-reports: "https://github.com/BinaryAnalysisPlatform/ppxlib-ocamlbuild/issues"
dev-repo: "git+https://github.com/BinaryAnalysisPlatform/ppxlib-ocamlbuild.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocamlbuild"
]
available: [ ocaml-version >= "4.04.1" ]
